The following problem has been corrected for Linux:

OBJ.linux/param.o: In function Param':
OBJ.linux/param.o(.text+0x22c): undefined reference to powf'
OBJ.linux/feature.o: In function Feature':
OBJ.linux/feature.o(.text+0x147): undefined reference to sqrtf'


First:

*** param.c     Mon Jan 12 21:29:31 1998
--- param.c.orig    Mon Jan 12 21:28:34 1998
***************
*** 57,64 ****
                    return((CELL)0);
                else
                    return((CELL)rint(200.0*resoln*wsize*(b*d*d + a*e*e - c*d*e) /
!                               /*      powf(e*e + d*d,1.5) )); */
!                                       pow(e*e + d*d,1.5) ));
                break;

        case LONGC:
--- 57,64 ----
                    return((CELL)0);
                else
                    return((CELL)rint(200.0*resoln*wsize*(b*d*d + a*e*e - c*d*e) /
!                                       powf(e*e + d*d,1.5) ));
                break;

        case LONGC:

----------------cut here--------------

Second:


*** feature.c   Mon Jan 12 21:30:49 1998
--- feature.c.orig  Tue Oct 10 11:16:35 1995
*** 34,41 ****

      minic = 20*wsize*resoln*(-a-b-sqrt((a-b)*(a-b) + c*c));
      maxic = 20*wsize*resoln*(-a-b+sqrt((a-b)*(a-b) + c*c));
! /*    slope = RAD2DEG*atan(sqrtf((d*d) + (e*e)));  */
!     slope = RAD2DEG*atan(sqrt((d*d) + (e*e)));
      crosc = -20*wsize*resoln*(b*d*d + a*e*e - c*d*e)/(d*d + e*e);


--- 33,39 ----

      minic = 20*wsize*resoln*(-a-b-sqrt((a-b)*(a-b) + c*c));
      maxic = 20*wsize*resoln*(-a-b+sqrt((a-b)*(a-b) + c*c));
!     slope = RAD2DEG*atan(sqrtf((d*d) + (e*e)));
      crosc = -20*wsize*resoln*(b*d*d + a*e*e - c*d*e)/(d*d + e*e);
