@@ -1,4 +1,4 @@
-/* Changes line 37 for Linux - Markus Neteler (Jan.1998)
+/* Changes line  37 for Linux - Markus Neteler (Jan.1998)
 /*****************************************************************************/
 /***                                                                       ***/
 /***                              feature()                                ***/
@@ -12,10 +12,8 @@
 #include <math.h>
 
 
-CELL 
-feature (
-    float *coeff		/* Set of six quadratic coefficents. 	*/
-)
+CELL feature (float *coeff)	/* Set of six quadratic coefficents. 	*/
+
 
 {
 
@@ -36,7 +34,6 @@ feature (
 
     minic = 20*wsize*resoln*(-a-b-sqrt((a-b)*(a-b) + c*c));
     maxic = 20*wsize*resoln*(-a-b+sqrt((a-b)*(a-b) + c*c));
-/*    slope = RAD2DEG*atan(sqrtf((d*d) + (e*e))); */
     slope = RAD2DEG*atan(sqrt((d*d) + (e*e))); 
     crosc = -20*wsize*resoln*(b*d*d + a*e*e - c*d*e)/(d*d + e*e);
 
